--- a/python.ipynb
+++ b/python.ipynb
@@ -86,7 +86,6 @@
     "x = 0 \n",
     "i = 5\n",
     "\n",
-    "\n",
     "while(x<i):\n",
     "    print(x)\n",
     "    x+=1"
@@ -122,27 +121,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-fb4b0222736d>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-fb4b0222736d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    do:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "do:\n",
-    "    x+1\n",
-    "    while(x<i)\n",
-    "        print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {
     "tags": [
      "list"
@@ -164,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "sets"
@@ -172,14 +150,10 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sets' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-b7b53f5f2f40>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m)\u001b[0m   \u001b[0;31m#set = set.add(9)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'sets' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 9}\n"
      ]
     }
    ],
@@ -189,12 +163,12 @@
     "\n",
     "set = {1,2,3,4,5,6,6,5,4,3}\n",
     "set.add(9)   #set = set.add(9)\n",
-    "print(sets)\n"
+    "print(set)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "tuples"
@@ -220,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "dictionaries"
@@ -243,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "list"
@@ -265,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "list_slicing"
@@ -291,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "list_comprehenssion"
@@ -315,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "numeric",
@@ -339,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "functional",
@@ -576,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "polymorpism"
@@ -593,11 +567,27 @@
     }
    ],
    "source": [
+    "class Animal:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def speak(self):\n",
+    "        pass  # This is a placeholder method that will be overridden in subclasses\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def speak(self):\n",
+    "        return f\"{self.name} says Woof!\"\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return f\"{self.name} says Meow!\"\n",
+    "\n",
     "def animal_sound(animal):\n",
     "    return animal.speak()\n",
     "\n",
     "dog = Dog(\"Buddy\")\n",
     "cat = Cat(\"Whiskers\")\n",
+    "\n",
     "print(animal_sound(dog))\n",
     "print(animal_sound(cat))\n"
    ]
@@ -620,6 +610,8 @@
     }
    ],
    "source": [
+    "# abstraction is the inner functionality of the objects\n",
+    "\n",
     "from abc import ABC, abstractmethod\n",
     "\n",
     "class Shape(ABC):\n",
@@ -640,10 +632,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "tags": [
+     "recursion"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "#recursion is function call itself is called recursion\n",
+    "\n",
+    "def factorial(x):\n",
+    "    if x==1:\n",
+    "        return 1;\n",
+    "    else:\n",
+    "        return x*factorial(x-1)\n",
+    "    \n",
+    "result = factorial(5)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "scrolled": true,
+    "tags": [
+     "itertools"
+    ]
+   },
+   "source": [
+    "from itertools import count\n",
+    "\n",
+    "\n",
+    "for i in count+2(3):\n",
+    "    print (i)\n",
+    "    \n",
+    "    if i>=20:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "matched\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "name = \"mugesh\"\n",
+    "if re.match(name,\"vetrimugesh\"):\n",
+    "    print(\"match\")\n",
+    "    \n",
+    "elif re.search(name,\"mugesh\"):\n",
+    "    print(\"matched\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"match\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": [
+     "dotmetacharacter"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "match\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "name = \".etri\"\n",
+    "if re.match(name,\"vetrimugesh\"):\n",
+    "    print(\"match\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# tkinter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "root = Tk()\n",
+    "\n",
+    "label1 = Label(root, text=\"hello world\")\n",
+    "label1.pack()\n",
+    "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tkinter import *\n",
+    "root = Tk()\n",
+    "\n",
+    "label1 = Label(root, text = \"first_name\")\n",
+    "label1 = Label(root, text = \"second_name\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
